2009/10/01 Simone Corbetta <simone.corbetta@gmail.com>	
	* WARNING! Project has been reverted to revision #21 
	* Local modifications, stable changes 

2009/10/01 Simone Corbetta <simone.corbetta@gmail.com>
	* Removed autogenerated files
	* Added new application 'dev_test' for FLASH memory testing

2009/09/30 Simone Corbetta <simone.corbetta@gmail.com>
	* Fixed some problems with EOL and conflicts

2009/09/30 Luigi Rucco <l.rucco@gmail.com>
	*updates

2009/09/30 Luigi Rucco <l.rucco@gmail.com>
	*corrections and updates

2009/09/30 Luigi Rucco <l.rucco@gmail.com>
	*deleted binary2buffer & co.

2009/09/39 Simone Corbetta <simone.corbetta@gmail.com>
	* Fixed bug introduced by last commit on Makefiles

2009/09/30 Luigi Rucco <l.rucco@gmail.com>
	* Deleted useless files and directories
	* Souces updates 

2009/09/24 Simone Corbetta <simone.corbetta@gmail.com>
	* Added documentation support (doxygen)

2009/09/24 Simone Corbetta <simone.corbetta@gmail.com>
	* Some documents added
	* Minor modifications

2009/09/24 Simone Corbetta <simone.corbetta@gmail.com>
	* Some bug fixes today (different commits allow for specific revision
	  checkout, for flexibility)
	* Test applications under 'test' directory have been removed

2009/09/24 Simone Corbetta <simone.corbetta@gmail.com>
	* Deleted some unnecessary files 
	* Updated some configure and makefiles

12-07-03: Moving to automake system so we need this file. 