@@ -1,6 +1,6 @@
 #############################################################################
 # Makefile for building: bin/WASP_dynamic_linker
-# Generated by qmake (2.01a) (Qt 4.5.0) on: mer set 30 15:31:13 2009
+# Generated by qmake (2.01a) (Qt 4.5.2) on: Wed Oct 7 16:02:26 2009
 # Project:  WASP_dynamic_linker.pro
 # Template: app
 # Command: /usr/bin/qmake-qt4 -unix -after  CONFIG+=release -o Makefile WASP_dynamic_linker.pro
@@ -63,51 +63,57 @@ debug-install: $(MAKEFILE).Debug FORCE
 debug-uninstall: $(MAKEFILE).Debug FORCE
 	$(MAKE) -f $(MAKEFILE).Debug uninstall
 
-Makefile: WASP_dynamic_linker.pro  /usr/share/qt4/mkspecs/linux-g++/qmake.conf /usr/share/qt4/mkspecs/common/g++.conf \
-		/usr/share/qt4/mkspecs/common/unix.conf \
-		/usr/share/qt4/mkspecs/common/linux.conf \
-		/usr/share/qt4/mkspecs/qconfig.pri \
-		/usr/share/qt4/mkspecs/features/qt_functions.prf \
-		/usr/share/qt4/mkspecs/features/qt_config.prf \
-		/usr/share/qt4/mkspecs/features/exclusive_builds.prf \
-		/usr/share/qt4/mkspecs/features/default_pre.prf \
-		/usr/share/qt4/mkspecs/features/release.prf \
-		/usr/share/qt4/mkspecs/features/debug_and_release.prf \
-		/usr/share/qt4/mkspecs/features/default_post.prf \
-		/usr/share/qt4/mkspecs/features/warn_on.prf \
-		/usr/share/qt4/mkspecs/features/qt.prf \
-		/usr/share/qt4/mkspecs/features/unix/thread.prf \
-		/usr/share/qt4/mkspecs/features/moc.prf \
-		/usr/share/qt4/mkspecs/features/resources.prf \
-		/usr/share/qt4/mkspecs/features/uic.prf \
-		/usr/share/qt4/mkspecs/features/yacc.prf \
-		/usr/share/qt4/mkspecs/features/lex.prf \
-		/usr/lib/libQt3Support.prl \
-		/usr/lib/libQtGui.prl \
-		/usr/lib/libQtCore.prl
+Makefile: WASP_dynamic_linker.pro  /usr/local/Trolltech/Qt-4.5.2/mkspecs/linux-g++/qmake.conf /usr/local/Trolltech/Qt-4.5.2/mkspecs/common/g++.conf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/common/unix.conf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/common/linux.conf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/qconfig.pri \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt_functions.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt_config.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/exclusive_builds.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/default_pre.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/release.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/debug_and_release.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/default_post.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/warn_on.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/unix/thread.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/moc.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/resources.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/uic.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/yacc.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/lex.prf \
+		/usr/local/Trolltech/Qt-4.5.2/lib/libQt3Support.prl \
+		/usr/local/Trolltech/Qt-4.5.2/lib/libQtSql.prl \
+		/usr/local/Trolltech/Qt-4.5.2/lib/libQtCore.prl \
+		/usr/local/Trolltech/Qt-4.5.2/lib/libQtXml.prl \
+		/usr/local/Trolltech/Qt-4.5.2/lib/libQtGui.prl \
+		/usr/local/Trolltech/Qt-4.5.2/lib/libQtNetwork.prl
 	$(QMAKE) -unix -after  CONFIG+=release -o Makefile WASP_dynamic_linker.pro
-/usr/share/qt4/mkspecs/common/g++.conf:
-/usr/share/qt4/mkspecs/common/unix.conf:
-/usr/share/qt4/mkspecs/common/linux.conf:
-/usr/share/qt4/mkspecs/qconfig.pri:
-/usr/share/qt4/mkspecs/features/qt_functions.prf:
-/usr/share/qt4/mkspecs/features/qt_config.prf:
-/usr/share/qt4/mkspecs/features/exclusive_builds.prf:
-/usr/share/qt4/mkspecs/features/default_pre.prf:
-/usr/share/qt4/mkspecs/features/release.prf:
-/usr/share/qt4/mkspecs/features/debug_and_release.prf:
-/usr/share/qt4/mkspecs/features/default_post.prf:
-/usr/share/qt4/mkspecs/features/warn_on.prf:
-/usr/share/qt4/mkspecs/features/qt.prf:
-/usr/share/qt4/mkspecs/features/unix/thread.prf:
-/usr/share/qt4/mkspecs/features/moc.prf:
-/usr/share/qt4/mkspecs/features/resources.prf:
-/usr/share/qt4/mkspecs/features/uic.prf:
-/usr/share/qt4/mkspecs/features/yacc.prf:
-/usr/share/qt4/mkspecs/features/lex.prf:
-/usr/lib/libQt3Support.prl:
-/usr/lib/libQtGui.prl:
-/usr/lib/libQtCore.prl:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/common/g++.conf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/common/unix.conf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/common/linux.conf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/qconfig.pri:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt_functions.prf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt_config.prf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/exclusive_builds.prf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/default_pre.prf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/release.prf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/debug_and_release.prf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/default_post.prf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/warn_on.prf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt.prf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/unix/thread.prf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/moc.prf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/resources.prf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/uic.prf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/yacc.prf:
+/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/lex.prf:
+/usr/local/Trolltech/Qt-4.5.2/lib/libQt3Support.prl:
+/usr/local/Trolltech/Qt-4.5.2/lib/libQtSql.prl:
+/usr/local/Trolltech/Qt-4.5.2/lib/libQtCore.prl:
+/usr/local/Trolltech/Qt-4.5.2/lib/libQtXml.prl:
+/usr/local/Trolltech/Qt-4.5.2/lib/libQtGui.prl:
+/usr/local/Trolltech/Qt-4.5.2/lib/libQtNetwork.prl:
 qmake: qmake_all FORCE
 	@$(QMAKE) -unix -after  CONFIG+=release -o Makefile WASP_dynamic_linker.pro
 
