@@ -1,6 +1,6 @@
 #############################################################################
 # Makefile for building: bin/WASP_dynamic_linker
-# Generated by qmake (2.01a) (Qt 4.5.0) on: mer set 30 15:31:13 2009
+# Generated by qmake (2.01a) (Qt 4.5.2) on: Wed Oct 7 16:02:26 2009
 # Project:  WASP_dynamic_linker.pro
 # Template: app
 #############################################################################
@@ -12,10 +12,10 @@ CXX           = g++
 DEFINES       = -DQT_QT3SUPPORT_LIB -DQT3_SUPPORT -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED
 CFLAGS        = -pipe -g -Wall -W -D_REENTRANT $(DEFINES)
 CXXFLAGS      = -pipe -g -Wall -W -D_REENTRANT $(DEFINES)
-INCPATH       = -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtGui -I/usr/include/qt4/Qt3Support -I/usr/include/qt4 -Ibuild -Ibuild
+INCPATH       = -I/usr/local/Trolltech/Qt-4.5.2/mkspecs/linux-g++ -I. -I/usr/local/Trolltech/Qt-4.5.2/include/QtCore -I/usr/local/Trolltech/Qt-4.5.2/include/QtGui -I/usr/local/Trolltech/Qt-4.5.2/include/Qt3Support -I/usr/local/Trolltech/Qt-4.5.2/include -Ibuild -Ibuild
 LINK          = g++
-LFLAGS        = 
-LIBS          = $(SUBLIBS)  -L/usr/lib -lQt3Support -lQtGui -lQtCore -lpthread
+LFLAGS        = -Wl,-rpath,/usr/local/Trolltech/Qt-4.5.2/lib
+LIBS          = $(SUBLIBS)  -L/usr/local/Trolltech/Qt-4.5.2/lib -lQt3Support -L/usr/local/Trolltech/Qt-4.5.2/lib -lQtSql -pthread -pthread -pthread -pthread -lQtXml -pthread -pthread -pthread -pthread -L/usr/X11R6/lib -pthread -pthread -pthread -pthread -pthread -pthread -lQtNetwork -pthread -pthread -pthread -pthread -pthread -pthread -lQtGui -pthread -lpng -lfreetype -lSM -lICE -pthread -pthread -lXrender -lfontconfig -lXext -lX11 -lQtCore -lz -lm -pthread -lgthread-2.0 -lrt -lglib-2.0 -ldl -lpthread
 AR            = ar cqs
 RANLIB        = 
 QMAKE         = /usr/bin/qmake-qt4
@@ -58,26 +58,26 @@ OBJECTS       = build/mainwindowimpl.o \
 		build/elf.o \
 		build/wlf_loader.o \
 		build/moc_mainwindowimpl.o
-DIST          = /usr/share/qt4/mkspecs/common/g++.conf \
-		/usr/share/qt4/mkspecs/common/unix.conf \
-		/usr/share/qt4/mkspecs/common/linux.conf \
-		/usr/share/qt4/mkspecs/qconfig.pri \
-		/usr/share/qt4/mkspecs/features/qt_functions.prf \
-		/usr/share/qt4/mkspecs/features/qt_config.prf \
-		/usr/share/qt4/mkspecs/features/exclusive_builds.prf \
-		/usr/share/qt4/mkspecs/features/default_pre.prf \
-		/usr/share/qt4/mkspecs/features/debug.prf \
-		/usr/share/qt4/mkspecs/features/debug_and_release.prf \
-		/usr/share/qt4/mkspecs/features/default_post.prf \
-		/usr/share/qt4/mkspecs/features/build_pass.prf \
-		/usr/share/qt4/mkspecs/features/warn_on.prf \
-		/usr/share/qt4/mkspecs/features/qt.prf \
-		/usr/share/qt4/mkspecs/features/unix/thread.prf \
-		/usr/share/qt4/mkspecs/features/moc.prf \
-		/usr/share/qt4/mkspecs/features/resources.prf \
-		/usr/share/qt4/mkspecs/features/uic.prf \
-		/usr/share/qt4/mkspecs/features/yacc.prf \
-		/usr/share/qt4/mkspecs/features/lex.prf \
+DIST          = /usr/local/Trolltech/Qt-4.5.2/mkspecs/common/g++.conf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/common/unix.conf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/common/linux.conf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/qconfig.pri \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt_functions.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt_config.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/exclusive_builds.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/default_pre.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/debug.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/debug_and_release.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/default_post.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/build_pass.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/warn_on.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/unix/thread.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/moc.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/resources.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/uic.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/yacc.prf \
+		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/lex.prf \
 		WASP_dynamic_linker.pro
 QMAKE_TARGET  = WASP_dynamic_linker
 DESTDIR       = bin/
@@ -143,7 +143,7 @@ build/moc_mainwindowimpl.cpp: src/elf.h \
 		src/serial.h \
 		build/ui_mainwindow.h \
 		src/mainwindowimpl.h
-	/usr/bin/moc-qt4 $(DEFINES) $(INCPATH) src/mainwindowimpl.h -o build/moc_mainwindowimpl.cpp
+	/usr/local/Trolltech/Qt-4.5.2/bin/moc $(DEFINES) $(INCPATH) src/mainwindowimpl.h -o build/moc_mainwindowimpl.cpp
 
 compiler_rcc_make_all:
 compiler_rcc_clean:
@@ -156,7 +156,7 @@ compiler_uic_make_all: build/ui_mainwindow.h
 compiler_uic_clean:
 	-$(DEL_FILE) build/ui_mainwindow.h
 build/ui_mainwindow.h: ui/mainwindow.ui
-	/usr/bin/uic-qt4 ui/mainwindow.ui -o build/ui_mainwindow.h
+	/usr/local/Trolltech/Qt-4.5.2/bin/uic ui/mainwindow.ui -o build/ui_mainwindow.h
 
 compiler_yacc_decl_make_all:
 compiler_yacc_decl_clean:
