@@ -109,13 +109,10 @@ void wlfLoader:: load(char*wlf_path){
 		else
 		{
 			/* total should be < 64 */
-<<<<<<< .mine
 			printf("\n%d bytes left... ", total);
 			com.send_message((unsigned char *)temp, total);
 			printf("sent");
-=======
 			com.send_message((unsigned char*)temp,total);
->>>>>>> .r19
 		}
 		
 		//send the termination message
