@@ -1,3 +1,6 @@
+2009/10/07 Simone Corbetta <simone.corbetta@gmail.com>
+	* svn:propset defined for ignoring some auto-generated files
+
 2009/10/01 Simone Corbetta <simone.corbetta@gmail.com>	
 	* WARNING! Project has been reverted to revision #21 
 	* Local modifications, stable changes 
